deleting and counter logic

--- a/src/components/burger-constructor/burger-construcor.module.css
+++ b/src/components/burger-constructor/burger-construcor.module.css
@@ -10,6 +10,12 @@
     margin-right: 8px;
 }
 
+.ingredientList {
+    max-width: 600px;
+    max-height: 570px;
+    overflow: auto;
+}
+
 .constructorOrder {
     display: flex;
     flex-direction: row;
