--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -17,7 +17,14 @@
     padding-right: 8px;
     padding-top: 16px;
     padding-bottom: 16px;
+}
 
+a {
+    color: #fff;
+}
+
+.menuItem > a {
+    text-decoration: none;
 }
 
 .logo {
