--- a/src/components/burger-constructor/burger-construcor.module.css
+++ b/src/components/burger-constructor/burger-construcor.module.css
@@ -6,6 +6,12 @@
     max-height: 80px;
 }
 
+.constructorContainer {
+    display: flex;
+    flex-direction: column;
+    max-height: 800px;
+}
+
 .constructorCard > svg {
     margin-right: 8px;
 }
@@ -21,6 +27,11 @@
     flex-direction: row;
     justify-content: center;
     padding-top: 40px;
+    align-self: end;
+}
+
+.constructorOrder > div, p {
+    align-self: center;
 }
 
 .baseElement {
